Replace sun.Base64 on Apache Commons Base64 encoding